--- a/exercise3/style.css
+++ b/exercise3/style.css
@@ -186,3 +186,39 @@ img{
 		width: 100%;
 	}
 }
+
+/* ----------- iPhone X ----------- */
+
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 812px) 
+  and (-webkit-min-device-pixel-ratio: 3) { 
+ 	h1 {
+	font-size: 150px;
+	margin-left: 5.5vw;
+	margin-top: 2vh;
+	line-height: 10vh;
+	}
+
+	.body-text{
+		font-size: 24px;
+		max-width: 450px;
+		margin-left: -40vw;
+		margin-top: 3vh
+	}
+
+	img{
+		position: fixed;
+		top: 0vh;
+		right: -80vw;
+		width: 145%;
+	}
+
+	#timestamp {
+		margin-left: 7vw;
+		margin-top: 2vh;
+		font-size: 14px;
+}
+
+}
