--- a/interface/style.css
+++ b/interface/style.css
@@ -1,6 +1,7 @@
 body{
-margin:10vh 7vw 10vh 10vw;
+margin:5vh 0vw 8vh 5vw;
 font-family: Roboto;
+background-color: black;
 }
 
 p{
@@ -8,7 +9,7 @@ margin: 0;
 }
 
 #box{
-width: 9%;
+width: 8%;
 height: 8vh;
 margin: 3px 1px 3px 1px;
 border-style: solid;
@@ -20,25 +21,25 @@ display:inline-block;
 line-height: 8vh;
 letter-spacing: 0.2vw;
 font-size: 2vw;
-color: white;
+color: black;
 background-color: black;
 }
 
 #box:hover{
-color: black;
+color: white;
 }
 
 a:clicked{
-color: white;
+color: black;
 text-decoration: none;
 }
 
 a{
-color:white;
+color:black;
 text-decoration: none;
 }
 
 a:hover{
-color:black;
+color:white;
 text-decoration: none;
 }
